# esp-gateway

./: .gitlab-ci.yml  CMakeLists.txt  sdkconfig.defaults
components/gateway/: CMakeLists.txt
components/gateway/include/: esp_gateway_config.h  esp_gateway_wifi.h
components/gateway/src/: gateway_netif_dongle.c  gateway_wifi.c
components/slave_driver_vfs/: CMakeLists.txt  ESP32_SERIES_SPI_USAGE.md  ESP32_SERIES_SPI_USAGE_CN.md  ESP_MULTI_WIRE_SPI_INTRODUCE.md  Kconfig.projbuild
components/slave_driver_vfs/include/: esp_vfs_dev_bus.h
components/slave_driver_vfs/include_private/: vfs_instance.h
components/slave_driver_vfs/src/: vfs_sdio_io.c  vfs_spi_io.c
components/slave_driver_vfs/src/port/esp32/: sdio_slave_io.c
components/slave_driver_vfs/src/port/esp32_series/: spi_slave_io.c
components/slave_driver_vfs/src/port/esp8266/: spi_slave_io.c
components/usb/tinyusb/additions/src/: tusb_net.c
main/: Kconfig.projbuild  app_main.c  esp_driver_adapter.c
